P3_Analizador_sintactico/y.output
Useless nonterminals

   CONST


Terminals which are not used

   DOSPUNTOS
   CONSTANTE


Useless rules

   92 CONST: CONSTANTE TIPO_DATO ID PUNTOYCOMA


Rules never reduced

   22 DECL_VAR_LOCALES: /* empty */


State 6 conflicts: 13 shift/reduce, 14 reduce/reduce
State 22 conflicts: 14 shift/reduce, 14 reduce/reduce
State 23 conflicts: 1 shift/reduce
State 26 conflicts: 2 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 2 shift/reduce
State 73 conflicts: 2 reduce/reduce
State 106 conflicts: 4 shift/reduce
State 129 conflicts: 3 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CAB_PROGRAMA BLOQUE

    2 CAB_PROGRAMA: PRINCIPAL INI_PARENTESIS FIN_PARENTESIS

    3 BLOQUE: INI_BLOQUE OPCIONES FIN_BLOQUE

    4 OPCIONES: OPCIONES DECL_VAR_LOCALES
    5         | OPCIONES DECL_PROCEDIMIENTOS
    6         | OPCIONES SENTENCIAS
    7         | DECL_VAR_LOCALES
    8         | DECL_PROCEDIMIENTOS
    9         | SENTENCIAS

   10 DECL_PROCEDIMIENTOS: DECL_PROCEDIMIENTOS DECL_PROCEDIMIENTO
   11                    | DECL_PROCEDIMIENTO
   12                    | /* empty */

   13 DECL_PROCEDIMIENTO: CAB_PROCEDIMIENTO BLOQUE

   14 CAB_PROCEDIMIENTO: ID INI_PARENTESIS PARAMETRO FIN_PARENTESIS

   15 PARAMETRO: PARAMETRO COMA TIPO_DATO ID
   16          | TIPO_DATO ID
   17          | PARAMETRO COMA ID
   18          | ID
   19          | /* empty */

   20 DECL_VAR_LOCALES: DECL_VAR_LOCALES VAR_LOCAL
   21                 | VAR_LOCAL
   22                 | /* empty */

   23 VAR_LOCAL: TIPO_DATO DECL_MULTIPLE ID PUNTOYCOMA
   24          | TIPO_DATO ID PUNTOYCOMA
   25          | TIPO_DATO DECL_MULTIPLE ASIGNACION PUNTOYCOMA
   26          | TIPO_DATO ASIGNACION PUNTOYCOMA

   27 DECL_MULTIPLE: DECL_MULTIPLE ID COMA
   28              | DECL_MULTIPLE ASIGNACION COMA
   29              | ID COMA
   30              | ASIGNACION COMA

   31 SENTENCIAS: BUCLE_FOR
   32           | BUCLE_WHILE
   33           | SENTENCIA_SI
   34           | ASIGNACION PUNTOYCOMA
   35           | SENTENCIA_ENTRADA PUNTOYCOMA
   36           | SENTENCIA_SALIDA PUNTOYCOMA
   37           | EXPRESION PUNTOYCOMA
   38           | SENTENCIA_LIST ID PUNTOYCOMA
   39           | ID SENTENCIA_LIST PUNTOYCOMA

   40 SENTENCIA_ENTRADA: ENTRADA INI_PARENTESIS LISTA_VAR FIN_PARENTESIS

   41 SENTENCIA_SALIDA: SALIDA INI_PARENTESIS LIST_ESXP_O_CAD FIN_PARENTESIS

   42 LISTA_VAR: LISTA_VAR COMA ID
   43          | ID

   44 LIST_ESXP_O_CAD: LIST_ESXP_O_CAD COMA EXPRESION
   45                | LIST_ESXP_O_CAD COMA COMILLAS CADENA COMILLAS
   46                | EXPRESION
   47                | COMILLAS CADENA COMILLAS

   48 CADENA: CADENA ID
   49       | ID

   50 BUCLE_FOR: BUCLE_PARA ID OP_ASIGNACION NUMERO MODO_FOR NUMERO FINPARA BLOQUE
   51          | BUCLE_PARA ID OP_ASIGNACION NUMERO MODO_FOR NUMERO FINPARA SENTENCIAS

   52 CONDICION: CONDICION OP_LOGICO CONDICION
   53          | INI_PARENTESIS CONDICION FIN_PARENTESIS
   54          | NEGACION CONDICION
   55          | NUMERO
   56          | ID

   57 SENTENCIA_SI: BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE SINO BLOQUE
   58             | BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE
   59             | BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS
   60             | BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS SINO BLOQUE
   61             | BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS SINO SENTENCIAS
   62             | BUCLE_SI INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE SINO SENTENCIAS
   63             | BUCLE_SI INI_PARENTESIS error FIN_PARENTESIS ENTONCES BLOQUE
   64             | BUCLE_SI INI_PARENTESIS error FIN_PARENTESIS ENTONCES BLOQUE SINO BLOQUE

   65 BUCLE_WHILE: BUCLE_MIENTRAS INI_PARENTESIS CONDICION FIN_PARENTESIS BLOQUE
   66            | BUCLE_MIENTRAS INI_PARENTESIS CONDICION FIN_PARENTESIS SENTENCIAS

   67 TIPO_DATO: TIPO_BASICO
   68          | TIPO_COMPLEJO

   69 TIPO_BASICO: TIPO_VAR

   70 TIPO_COMPLEJO: DECL_LISTAS TIPO_BASICO

   71 OP_BINARIO: OP_ARITMETICA
   72           | OP_LOGICO

   73 ASIGNACION: ID OP_ASIGNACION EXPRESION
   74           | ID OP_ASIGNACION ID
   75           | ID OP_ASIGNACION CAB_PROCEDIMIENTO
   76           | ID OP_ASIGNACION ASIGNACION
   77           | ID OP_ASIGNACION EST_AGREGADO

   78 EXPRESION: EXPRESION OP_BINARIO EXPRESION
   79          | EXPRESION OP_UNI_BIN EXPRESION
   80          | OP_UNARIO EXPRESION
   81          | EXPRESION OP_UNARIO
   82          | OP_UNI_BIN EXPRESION
   83          | EXPRESION OP_UNI_BIN
   84          | EXPRESION OP_UNARIO EXPRESION OP_ARITMETICA EXPRESION
   85          | INI_PARENTESIS EXPRESION FIN_PARENTESIS
   86          | NUMERO
   87          | ID

   88 EST_AGREGADO: INI_AGREGADO AGREGADOS FIN_AGREGADO

   89 AGREGADOS: EXPRESION COMA AGREGADOS
   90          | EXPRESION
   91          | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 63 64
OP_LOGICO (258) 52 72
OP_ARITMETICA (259) 71 84
NEGACION (260) 54
OP_UNARIO (261) 80 81 84
OP_UNI_BIN (262) 79 82 83
SINO (263) 57 60 61 62 64
ID (264) 14 15 16 17 18 23 24 27 29 38 39 42 43 48 49 50 51 56 73 74
    75 76 77 87
NUMERO (265) 50 51 55 86
INI_BLOQUE (266) 3
FIN_BLOQUE (267) 3
INI_AGREGADO (268) 88
FIN_AGREGADO (269) 88
PUNTOYCOMA (270) 23 24 25 26 34 35 36 37 38 39
OP_ASIGNACION (271) 50 51 73 74 75 76 77
BUCLE_SI (272) 57 58 59 60 61 62 63 64
BUCLE_MIENTRAS (273) 65 66
BUCLE_PARA (274) 50 51
INI_PARENTESIS (275) 2 14 40 41 53 57 58 59 60 61 62 63 64 65 66 85
FIN_PARENTESIS (276) 2 14 40 41 53 57 58 59 60 61 62 63 64 65 66 85
ENTONCES (277) 57 58 59 60 61 62 63 64
DECL_LISTAS (278) 70
TIPO_VAR (279) 69
COMA (280) 15 17 27 28 29 30 42 44 45 89
DOSPUNTOS (281)
MODO_FOR (282) 50 51
CONSTANTE (283)
COMILLAS (284) 45 47
FINPARA (285) 50 51
PRINCIPAL (286) 2
ENTRADA (287) 40
SALIDA (288) 41
SENTENCIA_LIST (289) 38 39


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
S (36)
    on left: 1, on right: 0
CAB_PROGRAMA (37)
    on left: 2, on right: 1
BLOQUE (38)
    on left: 3, on right: 1 13 50 57 58 60 62 63 64 65
OPCIONES (39)
    on left: 4 5 6 7 8 9, on right: 3 4 5 6
DECL_PROCEDIMIENTOS (40)
    on left: 10 11 12, on right: 5 8 10
DECL_PROCEDIMIENTO (41)
    on left: 13, on right: 10 11
CAB_PROCEDIMIENTO (42)
    on left: 14, on right: 13 75
PARAMETRO (43)
    on left: 15 16 17 18 19, on right: 14 15 17
DECL_VAR_LOCALES (44)
    on left: 20 21 22, on right: 4 7 20
VAR_LOCAL (45)
    on left: 23 24 25 26, on right: 20 21
DECL_MULTIPLE (46)
    on left: 27 28 29 30, on right: 23 25 27 28
SENTENCIAS (47)
    on left: 31 32 33 34 35 36 37 38 39, on right: 6 9 51 59 60 61
    62 66
SENTENCIA_ENTRADA (48)
    on left: 40, on right: 35
SENTENCIA_SALIDA (49)
    on left: 41, on right: 36
LISTA_VAR (50)
    on left: 42 43, on right: 40 42
LIST_ESXP_O_CAD (51)
    on left: 44 45 46 47, on right: 41 44 45
CADENA (52)
    on left: 48 49, on right: 45 47 48
BUCLE_FOR (53)
    on left: 50 51, on right: 31
CONDICION (54)
    on left: 52 53 54 55 56, on right: 52 53 54 57 58 59 60 61 62 65
    66
SENTENCIA_SI (55)
    on left: 57 58 59 60 61 62 63 64, on right: 33
BUCLE_WHILE (56)
    on left: 65 66, on right: 32
TIPO_DATO (57)
    on left: 67 68, on right: 15 16 23 24 25 26
TIPO_BASICO (58)
    on left: 69, on right: 67 70
TIPO_COMPLEJO (59)
    on left: 70, on right: 68
OP_BINARIO (60)
    on left: 71 72, on right: 78
ASIGNACION (61)
    on left: 73 74 75 76 77, on right: 25 26 28 30 34 76
EXPRESION (62)
    on left: 78 79 80 81 82 83 84 85 86 87, on right: 37 44 46 73 78
    79 80 81 82 83 84 85 89 90
EST_AGREGADO (63)
    on left: 88, on right: 77
AGREGADOS (64)
    on left: 89 90 91, on right: 88 89


state 0

    0 $accept: . S $end

    PRINCIPAL  shift, and go to state 1

    S             go to state 2
    CAB_PROGRAMA  go to state 3


state 1

    2 CAB_PROGRAMA: PRINCIPAL . INI_PARENTESIS FIN_PARENTESIS

    INI_PARENTESIS  shift, and go to state 4


state 2

    0 $accept: S . $end

    $end  shift, and go to state 5


state 3

    1 S: CAB_PROGRAMA . BLOQUE

    INI_BLOQUE  shift, and go to state 6

    BLOQUE  go to state 7


state 4

    2 CAB_PROGRAMA: PRINCIPAL INI_PARENTESIS . FIN_PARENTESIS

    FIN_PARENTESIS  shift, and go to state 8


state 5

    0 $accept: S $end .

    $default  accept


state 6

    3 BLOQUE: INI_BLOQUE . OPCIONES FIN_BLOQUE

    OP_UNARIO       shift, and go to state 9
    OP_UNI_BIN      shift, and go to state 10
    ID              shift, and go to state 11
    NUMERO          shift, and go to state 12
    BUCLE_SI        shift, and go to state 13
    BUCLE_MIENTRAS  shift, and go to state 14
    BUCLE_PARA      shift, and go to state 15
    INI_PARENTESIS  shift, and go to state 16
    DECL_LISTAS     shift, and go to state 17
    TIPO_VAR        shift, and go to state 18
    ENTRADA         shift, and go to state 19
    SALIDA          shift, and go to state 20
    SENTENCIA_LIST  shift, and go to state 21

    OP_UNARIO       [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    OP_UNARIO       [reduce using rule 22 (DECL_VAR_LOCALES)]
    OP_UNI_BIN      [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    OP_UNI_BIN      [reduce using rule 22 (DECL_VAR_LOCALES)]
    ID              [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    ID              [reduce using rule 22 (DECL_VAR_LOCALES)]
    NUMERO          [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    NUMERO          [reduce using rule 22 (DECL_VAR_LOCALES)]
    FIN_BLOQUE      reduce using rule 12 (DECL_PROCEDIMIENTOS)
    FIN_BLOQUE      [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_SI        [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_SI        [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_MIENTRAS  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_MIENTRAS  [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_PARA      [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_PARA      [reduce using rule 22 (DECL_VAR_LOCALES)]
    INI_PARENTESIS  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    INI_PARENTESIS  [reduce using rule 22 (DECL_VAR_LOCALES)]
    DECL_LISTAS     [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    DECL_LISTAS     [reduce using rule 22 (DECL_VAR_LOCALES)]
    TIPO_VAR        [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    TIPO_VAR        [reduce using rule 22 (DECL_VAR_LOCALES)]
    ENTRADA         [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    ENTRADA         [reduce using rule 22 (DECL_VAR_LOCALES)]
    SALIDA          [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    SALIDA          [reduce using rule 22 (DECL_VAR_LOCALES)]
    SENTENCIA_LIST  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    SENTENCIA_LIST  [reduce using rule 22 (DECL_VAR_LOCALES)]
    $default        reduce using rule 12 (DECL_PROCEDIMIENTOS)

    OPCIONES             go to state 22
    DECL_PROCEDIMIENTOS  go to state 23
    DECL_PROCEDIMIENTO   go to state 24
    CAB_PROCEDIMIENTO    go to state 25
    DECL_VAR_LOCALES     go to state 26
    VAR_LOCAL            go to state 27
    SENTENCIAS           go to state 28
    SENTENCIA_ENTRADA    go to state 29
    SENTENCIA_SALIDA     go to state 30
    BUCLE_FOR            go to state 31
    SENTENCIA_SI         go to state 32
    BUCLE_WHILE          go to state 33
    TIPO_DATO            go to state 34
    TIPO_BASICO          go to state 35
    TIPO_COMPLEJO        go to state 36
    ASIGNACION           go to state 37
    EXPRESION            go to state 38


state 7

    1 S: CAB_PROGRAMA BLOQUE .

    $default  reduce using rule 1 (S)


state 8

    2 CAB_PROGRAMA: PRINCIPAL INI_PARENTESIS FIN_PARENTESIS .

    $default  reduce using rule 2 (CAB_PROGRAMA)


state 9

   80 EXPRESION: OP_UNARIO . EXPRESION

    OP_UNARIO       shift, and go to state 9
    OP_UNI_BIN      shift, and go to state 10
    ID              shift, and go to state 39
    NUMERO          shift, and go to state 12
    INI_PARENTESIS  shift, and go to state 16

    EXPRESION  go to state 40


state 10

   82 EXPRESION: OP_UNI_BIN . EXPRESION

    OP_UNARIO       shift, and go to state 9
    OP_UNI_BIN      shift, and go to state 10
    ID              shift, and go to state 39
    NUMERO          shift, and go to state 12
    INI_PARENTESIS  shift, and go to state 16

    EXPRESION  go to state 41


state 11

   14 CAB_PROCEDIMIENTO: ID . INI_PARENTESIS PARAMETRO FIN_PARENTESIS
   39 SENTENCIAS: ID . SENTENCIA_LIST PUNTOYCOMA
   73 ASIGNACION: ID . OP_ASIGNACION EXPRESION
   74           | ID . OP_ASIGNACION ID
   75           | ID . OP_ASIGNACION CAB_PROCEDIMIENTO
   76           | ID . OP_ASIGNACION ASIGNACION
   77           | ID . OP_ASIGNACION EST_AGREGADO
   87 EXPRESION: ID .

    OP_ASIGNACION   shift, and go to state 42
    INI_PARENTESIS  shift, and go to state 43
    SENTENCIA_LIST  shift, and go to state 44

    $default  reduce using rule 87 (EXPRESION)


state 12

   86 EXPRESION: NUMERO .

    $default  reduce using rule 86 (EXPRESION)


state 13

   57 SENTENCIA_SI: BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE SINO BLOQUE
   58             | BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE
   59             | BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS
   60             | BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS SINO BLOQUE
   61             | BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES SENTENCIAS SINO SENTENCIAS
   62             | BUCLE_SI . INI_PARENTESIS CONDICION FIN_PARENTESIS ENTONCES BLOQUE SINO SENTENCIAS
   63             | BUCLE_SI . INI_PARENTESIS error FIN_PARENTESIS ENTONCES BLOQUE
   64             | BUCLE_SI . INI_PARENTESIS error FIN_PARENTESIS ENTONCES BLOQUE SINO BLOQUE

    INI_PARENTESIS  shift, and go to state 45


state 14

   65 BUCLE_WHILE: BUCLE_MIENTRAS . INI_PARENTESIS CONDICION FIN_PARENTESIS BLOQUE
   66            | BUCLE_MIENTRAS . INI_PARENTESIS CONDICION FIN_PARENTESIS SENTENCIAS

    INI_PARENTESIS  shift, and go to state 46


state 15

   50 BUCLE_FOR: BUCLE_PARA . ID OP_ASIGNACION NUMERO MODO_FOR NUMERO FINPARA BLOQUE
   51          | BUCLE_PARA . ID OP_ASIGNACION NUMERO MODO_FOR NUMERO FINPARA SENTENCIAS

    ID  shift, and go to state 47


state 16

   85 EXPRESION: INI_PARENTESIS . EXPRESION FIN_PARENTESIS

    OP_UNARIO       shift, and go to state 9
    OP_UNI_BIN      shift, and go to state 10
    ID              shift, and go to state 39
    NUMERO          shift, and go to state 12
    INI_PARENTESIS  shift, and go to state 16

    EXPRESION  go to state 48


state 17

   70 TIPO_COMPLEJO: DECL_LISTAS . TIPO_BASICO

    TIPO_VAR  shift, and go to state 18

    TIPO_BASICO  go to state 49


state 18

   69 TIPO_BASICO: TIPO_VAR .

    $default  reduce using rule 69 (TIPO_BASICO)


state 19

   40 SENTENCIA_ENTRADA: ENTRADA . INI_PARENTESIS LISTA_VAR FIN_PARENTESIS

    INI_PARENTESIS  shift, and go to state 50


state 20

   41 SENTENCIA_SALIDA: SALIDA . INI_PARENTESIS LIST_ESXP_O_CAD FIN_PARENTESIS

    INI_PARENTESIS  shift, and go to state 51


state 21

   38 SENTENCIAS: SENTENCIA_LIST . ID PUNTOYCOMA

    ID  shift, and go to state 52


state 22

    3 BLOQUE: INI_BLOQUE OPCIONES . FIN_BLOQUE
    4 OPCIONES: OPCIONES . DECL_VAR_LOCALES
    5         | OPCIONES . DECL_PROCEDIMIENTOS
    6         | OPCIONES . SENTENCIAS

    OP_UNARIO       shift, and go to state 9
    OP_UNI_BIN      shift, and go to state 10
    ID              shift, and go to state 11
    NUMERO          shift, and go to state 12
    FIN_BLOQUE      shift, and go to state 53
    BUCLE_SI        shift, and go to state 13
    BUCLE_MIENTRAS  shift, and go to state 14
    BUCLE_PARA      shift, and go to state 15
    INI_PARENTESIS  shift, and go to state 16
    DECL_LISTAS     shift, and go to state 17
    TIPO_VAR        shift, and go to state 18
    ENTRADA         shift, and go to state 19
    SALIDA          shift, and go to state 20
    SENTENCIA_LIST  shift, and go to state 21

    OP_UNARIO       [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    OP_UNARIO       [reduce using rule 22 (DECL_VAR_LOCALES)]
    OP_UNI_BIN      [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    OP_UNI_BIN      [reduce using rule 22 (DECL_VAR_LOCALES)]
    ID              [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    ID              [reduce using rule 22 (DECL_VAR_LOCALES)]
    NUMERO          [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    NUMERO          [reduce using rule 22 (DECL_VAR_LOCALES)]
    FIN_BLOQUE      [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    FIN_BLOQUE      [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_SI        [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_SI        [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_MIENTRAS  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_MIENTRAS  [reduce using rule 22 (DECL_VAR_LOCALES)]
    BUCLE_PARA      [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    BUCLE_PARA      [reduce using rule 22 (DECL_VAR_LOCALES)]
    INI_PARENTESIS  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    INI_PARENTESIS  [reduce using rule 22 (DECL_VAR_LOCALES)]
    DECL_LISTAS     [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    DECL_LISTAS     [reduce using rule 22 (DECL_VAR_LOCALES)]
    TIPO_VAR        [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    TIPO_VAR        [reduce using rule 22 (DECL_VAR_LOCALES)]
    ENTRADA         [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    ENTRADA         [reduce using rule 22 (DECL_VAR_LOCALES)]
    SALIDA          [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    SALIDA          [reduce using rule 22 (DECL_VAR_LOCALES)]
    SENTENCIA_LIST  [reduce using rule 12 (DECL_PROCEDIMIENTOS)]
    SENTENCIA_LIST  [reduce using rule 22 (DECL_VAR_LOCALES)]

    DECL_PROCEDIMIENTOS  go to state 54
    DECL_PROCEDIMIENTO   go to state 24
    CAB_PROCEDIMIENTO    go to state 25
    DECL_VAR_LOCALES     go to state 55
    VAR_LOCAL            go to state 27
    SENTENCIAS           go to state 56
    SENTENCIA_ENTRADA    go to state 29
    SENTENCIA_SALIDA     go to state 30
    BUCLE_FOR            go to state 31
    SENTENCIA_SI         go to state 32
    BUCLE_WHILE          go to state 33
    TIPO_DATO            go to state 34
    TIPO_BASICO          go to state 35
    TIPO_COMPLEJO        go to state 36
    ASIGNACION           go to state 37
    EXPRESION            go to state 38


state 23

    8 OPCIONES: DECL_PROCEDIMIENTOS .
   10 DECL_PROCEDIMIENTOS: DECL_PROCEDIMIENTOS . DECL_PROCEDIMIENTO

    ID  shift, and go to state 57

    ID        [reduce using rule 8 (OPCIONES)]
    $default  reduce using rule 8 (OPCIONES)

    DECL_PROCEDIMIENTO  go to state 58
    CAB_PROCEDIMIENTO   go to state 25


state 24

   11 DECL_PROCEDIMIENTOS: DECL_PROCEDIMIENTO .

    $default  reduce using rule 11 (DECL_PROCEDIMIENTOS)


state 25

   13 DECL_PROCEDIMIENTO: CAB_PROCEDIMIENTO . BLOQUE

    INI_BLOQUE  shift, and go to state 6

    BLOQUE  go to state 59


state 26

    7 OPCIONES: DECL_VAR_LOCALES .
   20 DECL_VAR_LOCALES: DECL_VAR_LOCALES . VAR_LOCAL

    DECL_LISTAS  shift, and go to state 17
    TIPO_VAR     shift, and go to state 18

    DECL_LISTAS  [reduce using rule 7 (OPCIONES)]
    TIPO_VAR     [reduce using rule 7 (OPCIONES)]
    $default     reduce using rule 7 (OPCIONES)

    VAR_LOCAL      go to state 60
    TIPO_DATO      go to state 34
    TIPO_BASICO    go to state 35
    TIPO_COMPLEJO  go to state 36


state 27

   21 DECL_VAR_LOCALES: VAR_LOCAL .

    $default  reduce using rule 21 (DECL_VAR_LOCALES)


state 28

    9 OPCIONES: SENTENCIAS .

    $default  reduce using rule 9 (OPCIONES)


state 29

   35 SENTENCIAS: SENTENCIA_ENTRADA . PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 61


state 30

   36 SENTENCIAS: SENTENCIA_SALIDA . PUNTOYCOMA

    PUNTOYCOMA  shift, and go to state 62


state 31

   31 SENTENCIAS: BUCLE_FOR .

    $default  reduce using rule 31 (SENTENCIAS)


state 32

   33 SENTENCIAS: SENTENCIA_SI .

    $default  reduce using rule 33 (SENTENCIAS)

